// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unknown plugin 1. unknown plugin: 1. unknown plugin 1`] = `

const Component = flowMax(
  addAnimatedStyle('style', ({opacity}) => () => ({
    opacity,
  })),
  () => null
)

      ↓ ↓ ↓ ↓ ↓ ↓

const Component = flowMax(
  addAnimatedStyle('style', ({opacity}) => () => {
    'worklet'

    return {
      opacity,
    }
  }),
  () => null,
)


`;

exports[`unknown plugin 2. unknown plugin: 2. unknown plugin 1`] = `

const Component = flowMax(
  addDerivedValue('value', ({position}) => () => ({
    opacity: position.value * 0.1,
  })),
  () => null
)

      ↓ ↓ ↓ ↓ ↓ ↓

const Component = flowMax(
  addDerivedValue('value', ({position}) => () => {
    'worklet'

    return {
      opacity: position.value * 0.1,
    }
  }),
  () => null,
)


`;
